fix overflow

--- a/apps/dotcms-block-editor/src/app/dot-block-editor/dot-block-editor.component.scss
+++ b/apps/dotcms-block-editor/src/app/dot-block-editor/dot-block-editor.component.scss
@@ -5,24 +5,38 @@
 
 
 dotcms-block-editor {
+    border-radius: 4px;
     display: block;
-    height: 100%;
-    width: 100%;
+    height: 500px;
+    outline: $gray-light solid 1px;
+
+    &:focus {
+        outline-color: $brand-primary;
+    }
+
+    .editor_wrapper {
+        display: block;
+        height: 100%;
+        overflow-y: hidden;
+        position: relative;
+    }
+
+    tiptap-editor {
+        display: block;
+        height: 100%;
+        overflow-y: auto;
+        width: 100%;
+    }
 
     .ProseMirror {
         -moz-box-sizing: border-box;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
-        border-radius: 4px;
         display: block;
-        height: 100%;
-        min-height: 500px;
-        outline: $gray-light solid 1px;
+        min-height: 100%;
+        outline: none;
         padding: $spacing-5 $spacing-8;
-    }
-
-    .ProseMirror-focused {
-        outline-color: $brand-primary;
+        width: 100%;
     }
 }
 
